# mailing-service

./: .env.sample  README.md  pyproject.toml  requirements.txt
clients/: admin.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py  0002_initial.py  0003_alter_client_options_and_more.py
clients/templates/: base.html
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
mailings/: admin.py  models.py  urls.py  views.py
mailings/management/commands/: create_groups.py  send_mailings.py
mailings/migrations/: 0001_initial.py  0002_initial.py  0003_alter_mailing_options_alter_mailingattempt_options_and_more.py
mailings/templates/: base.html
mailings/templates/mailings/: home.html  mailing_attempt_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
static/css/: all.min.css  bd-placeholder-img
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_email_idx_and_more.py
users/templates/users/: login.html  profile.html  profile_form.html  register.html
