[tool.poetry]
name = "kurcov-4"
version = "0.1.0"
description = ""
authors = ["oksanafedorova07 <kcenka4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
dotenv = "^0.9.9"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
